--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <body>
 
 <div id="game">
+  <div id="game-info">
+    <h1>Connect 4</h1>
+    <div id="player-info">
+      <div id="player-one"><h2>Player 1</h2></div>
+      <div id="start-game"><div>Start Game</div></div>
+      <div id="player-two"><h2>Player 2<h2></div>
+    </div>
+  </div>
   <table id="board"></table>
 </div>
 
